--- a/005-services/nginx-deploy.yaml
+++ b/005-services/nginx-deploy.yaml
@@ -18,7 +18,7 @@ spec:
         run: nginx
     spec:
       containers:
-      - image: kennethreitz/httpbin
+      - image: nginx
         name: nginx
         ports:
         - containerPort: 80
